Wed May 19 13:21:55 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Improve rule to create gssapi include dir under
		windows.

Wed May 19 11:40:52 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Add windows build rules for putting header files in
		include dir.

Mon May 10 15:22:27 1999  Danilo Almeida  <dalmeida@mit.edu>

	* Makefile.in: Do win32 build in subdir.

Fri Apr 30 12:27:14 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* set_ccache.c (gss_krb5_ccache_name): Add call to free the
		default credential changing the ccache name.

Thu Apr 29 18:02:00 1999  Miro Jurisic  <meeroh@mit.edu>

	* gssapi_krb5.h: Remove gssapi_generic.h includes because
		this header file is public interface and gssapi_generic.h
		isn't and shouldn't be included by clients.

Fri Apr 23 00:31:17 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* wrap_size_limit.c (krb5_gss_wrap_size_limit): Fix wrap_size
		limit so that it correctly calculates its results, and
		underestimates the correct size instead of overestimating
		it, and not returning zero all the time.  (Which it used
		to do after the March 25 fix.)

Sat Apr 17 01:23:57 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* gssapi_krb5.h, copy_ccache.c, get_tkt_flags.c, set_ccache.c:
 		Make the krb5 extension functions exportable in a Windows
 		DLL.

Fri Mar 26 22:17:20 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* acquire_cred.c (krb5_gss_acquire_cred): Don't use strcmp to
 		compare against principal components (they aren't null
 		terminated!)

Thu Mar 25 22:43:54 1999  Theodore Y. Ts'o  <tytso@mit.edu>

	* gssapi_krb5.c: Rearrange OID's so that the V1V2 mechanism set
		returns all three mechanism ID's recognized by this
		implementation, with the RFC1964 OID first (and thus
		preferred). 

	* import_sec_context.c (krb5_gss_convert_static_mech_oid): Make
		the old convert_static_oid() function globally accessible
		with a namespace compliant name, since init_sec_context()
		needs to be able to use this function.
